--- a/main.html
+++ b/main.html
@@ -4,10 +4,17 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Beautiful IMDb Movie Detail Page</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+ <div class="container">
+        <img src="movie-poster.jpg" alt="Movie Poster" class="moviePic">
+        <p class="movieDetail">
+            In a world where the ordinary is extraordinary, one hero will rise against the odds. This epic tale of love, loss, and redemption will leave you on the edge of your seat.
+        </p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
